--- a/tex_files/bib-refs.bib
+++ b/tex_files/bib-refs.bib
@@ -537,7 +537,7 @@ outbreak in Germany},
     year = {2017},
     volume = {2},
     number = {14},
-    month = {jun},
+    month = {6},
     publisher = {The Open Journal},
     url = {https://doi.org/10.21105/joss.00305},
     doi = {10.21105/joss.00305},
@@ -770,20 +770,28 @@ outbreak in Germany},
   year={1980}
 }
 
-@article{kullback1951information,
-  title={On information and sufficiency},
-  author={Kullback, Solomon and Leibler, Richard A},
-  journal={The annals of mathematical statistics},
-  volume={22},
-  number={1},
-  pages={79--86},
-  year={1951},
-  publisher={JSTOR}
-}
-
 @book{fahrmeir2016statistik,
   title={Statistik: Der weg zur datenanalyse},
   author={Fahrmeir, Ludwig and Heumann, Christian and K{\"u}nstler, Rita and Pigeot, Iris and Tutz, Gerhard},
   year={2016},
   publisher={Springer-Verlag}
+}
+@incollection{leroux2000estimation,
+  title={Estimation of disease rates in small areas: a new mixed model for spatial dependence},
+  author={Leroux, Brian G and Lei, Xingye and Breslow, Norman},
+  booktitle={Statistical models in epidemiology, the environment, and clinical trials},
+  pages={179--191},
+  year={2000},
+  publisher={Springer}
+}
+
+@article{besag1974spatial,
+  title={Spatial interaction and the statistical analysis of lattice systems},
+  author={Besag, Julian},
+  journal={Journal of the Royal Statistical Society: Series B (Methodological)},
+  volume={36},
+  number={2},
+  pages={192--225},
+  year={1974},
+  publisher={Wiley Online Library}
 }
