--- a/tex_files/chapter-bayes.tex
+++ b/tex_files/chapter-bayes.tex
@@ -727,8 +727,13 @@ To obtain the approximations for the posterior marginals for the $x_i$'s conditi
 \clearpage
 \section{Bayesian Spatial Models}
 \subsection{The Besag-York-Mollie Model}
+\autocite[][]{besag1991bayesian}
+\subsubsection{The BYM2 Model}
+\autocite[][]{simpson2017penalising}
 \subsection{Besags' Proper Spatial Model}
+\autocite[][]{besag1974spatial}
 \subsection{The Leroux Model}
+\autocite[][]{leroux2000estimation}
 \clearpage
 \section{Goodness-of-Fit indicators}
 The goodness of fit indicates "how well" an estimated model can explain a set of observations. Measures of goodness of fit allow a statement to be made about the discrepancy between the theoretical values of the random variables under investigation, which are expected or predicted on the basis of the model, and the values actually measured. \\
